--- a/drawing/index.html
+++ b/drawing/index.html
@@ -32,7 +32,7 @@
 }
 #DrawSet {
 	position: relative;
-	height: 400px;
+	height: 500px;
 	margin: 0px 0px 0px 0px;
 	padding: 0px;
 	text-align: center;
@@ -107,8 +107,7 @@ function drawing_postSaveAction(f) {
 
 </div>
 <div id="footerDiv">
-	Designed &amp; Developed by: Lucky Daddy 
-	<!-- @ <a href="http://www.dreamdesignsweb.com" target="_new">www.dreamdesignsweb.com</a> -->
+	Powered by: Lucky Daddy 
 </div>
 
 
